--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.lifecycle_version = "2.1.0"
     repositories {
         google()
         jcenter()
@@ -31,6 +32,16 @@ allprojects {
         rxJavaLibs = [
                 rxAndroid: 'io.reactivex.rxjava2:rxandroid:2.1.1',
                 rxJava   : 'io.reactivex.rxjava2:rxjava:2.2.10'
+        ]
+
+        lifecycleLibs = [
+                extensions     : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
+                common         : "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version",
+                reactiveStreams: "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version",
+        ]
+
+        lifecycleTestLibs = [
+                core: "androidx.arch.core:core-testing:$lifecycle_version",
         ]
     }
 }
