--- a/reactiveelements/build.gradle
+++ b/reactiveelements/build.gradle
@@ -29,9 +29,12 @@ dependencies {
 
     implementation kotlinLibs.values()
     implementation rxJavaLibs.values()
+    implementation lifecycleLibs.values()
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
+
+    testImplementation lifecycleTestLibs.values()
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'io.mockk:mockk:1.9.3'
